add EP and change body text to reflect that this is no longer a PBK project

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <title>AGENT OF FORTUNE</title>
 </head>
 <body>
-    <img src="cover.jpg" alt="AGENT OF FORTUNE ALBUM COVER" class="center">
+    <img src="epcover.png" alt="A SELECTION OF SONGS FROM AGENT OF FORTUNE ALBUM COVER" class="center">
     <h1><span><class="flame">AGENT OF FORTUNE</class></span><br></h1>
-    <h2><span>PREGNANT BEACH KITTIES</span></h2>
+    <h2><span>STEVEN LLOYD CUSHMAN</span></h2>
     <p><a href=album.mp3><span>STREAM THE WHOLE ALBUM HERE</span></a></p>
     <p><a href=agentoffortune><span>DOWNLOAD THE TRACKS HERE</span></a></p>
 </body>
